Context Menu on any button is broken #73482

Closed
opened 2020-01-29 09:58:16 +01:00 by Philipp Oeser · 8 comments
Member

System Information
Operating system: Linux-5.3.12-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-29 00:11, hash: 7642ee627a
Worked: a5790b2656^

Short description of error
Context Menu on any button is broken

Exact steps for others to reproduce the error
In the default .blend with the cube selected:

  • head over to the Properties Editor > Object Properties tab
  • invoke the context menu {key RMB} on any button (e.g. Location X)
  • choose Insert Single Keyframe > nothing happens
  • choose Online Manual > nothing happens
  • choose Edit Source > get the message "Active Button not found"

Caused by a5790b2656

**System Information** Operating system: Linux-5.3.12-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-29 00:11, hash: `7642ee627a` Worked: a5790b2656^ **Short description of error** Context Menu on any button is broken **Exact steps for others to reproduce the error** In the default .blend with the cube selected: - head over to the `Properties Editor` > `Object Properties` tab - invoke the context menu {key RMB} on any button (e.g. `Location X`) - choose `Insert Single Keyframe` > nothing happens - choose `Online Manual` > nothing happens - choose `Edit Source` > get the message "Active Button not found" Caused by a5790b2656
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

#73463 was marked as duplicate of this issue

#73463 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Author
Member
CC @JulianEisel
Julian Eisel was assigned by Dalai Felinto 2020-01-29 10:12:10 +01:00
Author
Member
Added subscribers: @jpbouza-4, @WilliamReynish, @angavrilov, @dr.sybren

This issue was referenced by 7c9b5523ff

This issue was referenced by 7c9b5523ff4c4f392d495d06eb9b8a0b2ca5da3f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73482
No description provided.